# dangless-malloc

./: .gitignore  .gitmodules  LICENSE  README.md  abstract.txt  libperf-tlb-report  rumpkernel-notes.txt  setup.py
doc/img/: dangling_pointer_basics.xml
dune-autoenter/: CMakeLists.txt  user.make.in
notes/: brk_4GB_bug.txt  dune-notes.txt  dune-notes2.txt  dune_mem_layout.stdout  infra.txt  kickoff-meeting.txt  koen-meeting2.txt  meeting-herbert-notes.txt  meeting-notes.txt  restart-meeting-notes.txt  spec-benchmarks.txt  spec2006.txt  todo.txt
notes/old/: meeting-new.txt  summary.txt
pres/: pres.bak-0922.tex
pres/draw.io-figures/: dangless_simplified.xml  dangless_virtremap.xml  dangless_virtremap_mappings.xml  normal_malloc.xml
results/: hmmer_new_report.txt  mem_vs_oscar.csv  mem_vs_oscar.txt  perf_diff_with_oscar_analysis.csv  perf_diff_with_oscar_analysis.numbers  perf_diff_with_oscar_analysis.xlsx  perf_difference_analysis.txt  perf_vs_oscar.csv  perf_vs_oscar.txt  spec2006_report.txt  spec2006_report_old.txt
sources/: .gitignore  CMakeLists.txt  Makefile  findrumpsym.sh  sync.sh
sources/cmake/: buildconfig.h.in  configure_file_generate.cmake  dangless_user.cmake  dangless_user.make.in  target_sources_local.cmake
sources/cmake/modules/: FindLibDune.cmake  FindLinuxHeaders.cmake  FindPython3.cmake  target_sources_local.cmake
sources/cmake/templates/: buildconfig.h.in  dangless_user.make.in
sources/dangless/: Makefile  findsym.sh  rumpsym.sh  sync.sh  todo.txt
sources/dangless/include/: common.h  config.h  dangless_malloc.h
sources/dangless/include/platform/: mem.h  virtual_remap.h
sources/dangless/make/: buildconfig.mk
sources/dangless/src/: common.c  dangless_malloc.c  dump.c
sources/dangless/src/platform/dune/: Makefile.frag.mk  libinit.c  sysmalloc.c
sources/dangless/src/platform/rumprun/: sysmalloc.c  virtual_remap.c
sources/dangless/tests/dune/: Makefile  common.c  dunetest.c
sources/dangless/tests/framework/: Makefile
sources/dangless/tests/framework/include/: assert.h  testfx.h
sources/dangless/tests/framework/src/: testmain.c
sources/dangless/tests/rumprun/: Makefile
sources/dune-autoenter/: Makefile  dune-autoenter.c
sources/include/: common.h  dump.h
sources/include/dangless/: common.h  config.h  dangless_malloc.h  dump.h  printf_nomalloc.h  pthread_mock.h  syscallmeta.h  virtmem.h  virtmem_alloc.h
sources/include/dangless/common/: assert.h  console_colors.h  debug.h  dprintf.h  perf_events.h  ppmap.h  printf_nomalloc.h  statistics.h  types.h  util.h
sources/include/dangless/platform/: mem.h  physmem_alloc.h  sysmalloc.h  virtual_remap.h
sources/include/platform/: physmem_alloc.h  sysmalloc.h
sources/make/: buildconfig-defaults.mk  buildconfig.mk  gen_vmcall_fixup_info.py
sources/scripts/: gen_syscall_param_fixup_flags.py  gen_syscall_userptr_info.py  gen_vmcall_fixup_info.py  generate_syscallmeta.py  rumpenv.sh  setup.py  spec2006_clear.sh  spec2006_collect_logs.sh  sync-new-broken.sh  sync.sh  testspec.sh
sources/src/: CMakeLists.txt  common.c  dangless_malloc.c  dump.c  printf_nomalloc.c  syscallmeta.c  virtmem.c  virtmem_alloc.c
sources/src/common/: CMakeLists.txt  assert.c  debug.c  dprintf.c  perf_events.c  printf_nomalloc.c  statistics.c
sources/src/platform/dune/: CMakeLists.txt  Makefile.frag.mk  init.c  init.h  libinit.c  mem.c  physmem_alloc.c  sysmalloc.c  virtual_remap.c  vmcall_fixup.c  vmcall_fixup.h  vmcall_fixup_info.c  vmcall_fixup_info.h  vmcall_fixup_restore.c  vmcall_fixup_restore.h  vmcall_handle_fork.S  vmcall_handle_fork.c  vmcall_handle_fork.h  vmcall_hooks.c  vmcall_hooks.h  vmcall_prehook.c  vmcall_prehook.h
sources/src/platform/rumprun/: Makefile.frag.mk  mem.c  physmem_alloc.c  rumprun.h  sysmalloc.c  virtual_remap.c
sources/test-dune/: Makefile  archive.c
sources/test-dune/include/: common.h
sources/test-dune/src/: main.c
sources/testapps/: CMakeLists.txt  common.mk
sources/testapps/clone/: CMakeLists.txt  Makefile  clone.c
sources/testapps/cpp-ofstream/: CMakeLists.txt  Makefile  cpp-ofstream.cpp
sources/testapps/dune-mem-layout/: CMakeLists.txt  Makefile  dune-mem-layout.c  virtmem_chart_layout.c  virtmem_chart_layout.h
sources/testapps/hello-world/: CMakeLists.txt  Makefile  hello-world.c
sources/testapps/memstress/: CMakeLists.txt  Makefile  memstress.c
sources/testapps/segfault/: CMakeLists.txt  Makefile  segfault.c
sources/testapps/writev-syscall/: CMakeLists.txt  Makefile  writev-syscall.c
sources/tests/: CMakeLists.txt
sources/tests/dune/: CMakeLists.txt  Makefile  basics-v2.c  basics.c  common.c  data.txt  dunetest.c  dunetest.h  fileio.c  math.c  printf_nomalloc.c  sysmalloc_fallback.c  virtmem_alloc.c
sources/tests/framework/: CMakeLists.txt  Makefile  ctestfx_user.make.in  vafwd-gcc-bug.c
sources/tests/framework/include/: testfx.h
sources/tests/framework/include/ctestfx/: ctestfx.h  expect.h
sources/tests/framework/include/testfx/: assert.h  testfx.h  testsuite.h
sources/tests/framework/include/testfx/internals/: testsuite.h
sources/tests/framework/include/v1/internals/: common.h  testsuite.h
sources/tests/framework/metatest/: Makefile  metatest.c
sources/tests/framework/src/: ctestfx.c  testmain.c  testmain.c.v1
sources/tests/rumprun/: main.c
spec2006-config/: dangless-baseline.cfg  dangless-dangless-debug.cfg  dangless-dangless-release.cfg  dangless-dune.cfg
test/: .autoenv.zsh  Makefile  dune-notes.txt  env.sh  main.c  pagetables.c  rumpsym.sh  safemalloc.c  todo.txt
test-dune/: notes.txt  questions.txt
test-dune/src/: main.c
test/include/: common.h  config.h  dangless_malloc.h  mem.h  nomalloc_printf.h  pagetables.h  physmem.h  physmem_alloc.h  printf_nomalloc.h  pthread_mock.h  rumpkern.h  safemalloc.h  sysmalloc.h  virtmem.h  virtmem_alloc.h
test/src/: common.c  dangless_malloc.c  dangless_malloc_symoverrides.c  dump.c  main.c  nomalloc_printf.c  (+6 more)
thesis/: .gitignore  bibliography.bib  dangling_pointer_examples.cpp  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
www/: index.html
(+56 files in other folders)
